 - gui: added support for nested manually-rendered objects (scroll frame inside scroll frame)
 - gui: added renderer::set_view() to allow arbitrary view transforms
 - gui: added color::from_hsv and color::to_hsv
 - gui: added support for custom frame/layered_region factory functions
 - gui: added EditBox:set_font Lua function
 - gui: renamed gui::manager_impl into gui::renderer
 - gui: renamed gui::gl::manager into gui::gl::renderer
 - gui: renamed gui::gl::matrix4f into gui::matrix4f and reworked internals of the class
 - gui: renamed frame::on into frame::on_script
 - gui: renamed frame::fire_build_layer_list into frame::notify_layers_need_update
 - gui: renamed frame_renderer::fire_redraw into notify_strata_needs_redraw
 - gui: renamed uiobject::fire_udpate_borders to uiobject::notify_borders_need_update
 - gui: renamed color::chanel to color::channel
 - gui: renamed quad2 to bounds2
 - gui: removed Frame:on from Lua API (instead, call scripts directly, e.g.: frame:on_update())
 - gui: removed the sprite class
 - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
 - gui: sprite is now a value type
 - gui: the GUI will now properly handle render window being resized
 - gui: all UI objects are now managed with explicit single ownership (unique_ptr)
 - gui: added frame_renderer class interface to clarify the frame class
 - gui: only frames can now be flagged as having a frame_renderer
 - gui: "frame_level" has been renamed to just "level"
 - gui: frame::get_children and frame::get_regions return views rather than containers
 - gui: added gui::down_cast for safer down casting
 - gui: removed clear_links() in favor of using destructors
 - gui: added mechanism to handle most cases where a widget is destroyed in a callback
 - gui: relative sizing is now only applicable to XML <Size>
 - gui: added OnReceiveDrag for frame
 - gui: added OnCursorChanged for edit_box
 - gui: added OnUpPressed and OnDownPressed callbacks to edit_box