@@ -1167,6 +1167,7 @@ namespace gui
         method(font_string, get_shadow_color),
         method(font_string, get_shadow_offset),
         method(font_string, get_spacing),
+        method(font_string, get_line_spacing),
         method(font_string, get_text_color),
         method(font_string, set_font),
         method(font_string, set_justify_h),
@@ -1174,6 +1175,7 @@ namespace gui
         method(font_string, set_shadow_color),
         method(font_string, set_shadow_offset),
         method(font_string, set_spacing),
+        method(font_string, set_line_spacing),
         method(font_string, set_text_color),
         method(font_string, can_non_space_wrap),
         method(font_string, can_word_wrap),
